<?xml version="1.0" encoding="utf-8"?><!--
 Copyright 2016 The TensorFlow Authors. All Rights Reserved.

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

     http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
-->
<resources>
    <string name="app_name">Magritte</string>
    <string name="app_slogan">Ceci n\'est pas une pomme.</string>

    <string name="description_info">Info</string>
    <string name="request_permission">This sample needs camera permission.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>

    <string name="start">Let\'s Start</string>
    <string name="result">Result: %1$s Confidence: %2$f\n</string>

    <string name="french">French</string>
    <string name="init_progress">0 / 20</string>
    <string name="chinese">Chinese</string>
    <string name="italian">Italian</string>

    <string name="apple">apple</string>
    <string name="grape">grape</string>
    <string name="kiwi">kiwi</string>
    <string name="banana">banana</string>
    <string name="strawberry">strawberry</string>
    <string name="fruit">Fruit</string>

    <string name="loading">Downloading initial data…</string>
    <string name="data_init_success">Data initialized with success.</string>
    <string name="data_init_error">Data initialization failed.</string>
    <string name="retry">Retry</string>
    <string name="model_normal">Model (Normal)</string>
    <string name="model_mobilenets">Model (MobileNets–1.0-224)</string>
    <string name="model_mobilenets_0_5">Model (MobileNets-0.5-224)</string>
    <string name="model_mobilenets_0_25">Model (MobileNets-0.25-224)</string>
</resources>
