<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fr.xebia.magritte.home.VersionActivity">

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/modelNormal"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:text="@string/model_normal"
        app:layout_constraintBottom_toTopOf="@+id/modelMobileNets"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/modelMobileNets"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:text="@string/model_mobilenets"
        app:layout_constraintBottom_toTopOf="@+id/modelMobileNets50"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/modelNormal" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/modelMobileNets50"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:text="@string/model_mobilenets_0_5"
        app:layout_constraintBottom_toTopOf="@+id/modelMobileNets25"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/modelMobileNets" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/modelMobileNets25"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:text="@string/model_mobilenets_0_25"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/modelMobileNets50" />

</android.support.constraint.ConstraintLayout>
